--- a/starter-code/public/admin.html
+++ b/starter-code/public/admin.html
@@ -11,7 +11,11 @@
     <link rel="stylesheet" href="/styles/modules.css">
     <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
     <!-- TODO: Setup a template for each row of the Author Stats section of this page: -->
-
+      <script id='authors-template' type='text/x-handlebars-template'>
+        <article class='clearfix' data-author='{{author}}' data-stats'{{data}}'>
+          <li>`{{author}} + {{data}}`</li>
+        </article>
+      </script>
   </head>
   <body>
     <header class="site-header clearfix">
@@ -38,6 +42,7 @@
         <h2>Author Stats</h2>
         <p><em>Details on who is writing, and how much writing they are doing...</em></p>
         <ul class="author-stats">
+
         </ul>
       </section>
     </main>
@@ -51,9 +56,10 @@
     <script src="/scripts/articleView.js"></script>
     <!-- TODO: Due to changes in article.js and articleView.js to attach their interior objects to a global 'app' object, we need to make changes to the contents of the following <script> tag: -->
     <script>
+
       // TODO: After we fetch and load all the articles, what view function do we want to run next?
       // Let's pass in a callback function, to determine what happens AFTER all articles are loaded.
-      Article.fetchAll();
+      app.Article.fetchAll(article);
     </script>
   </body>
 </html>
