--- a/starter-code/public/admin.html
+++ b/starter-code/public/admin.html
@@ -56,10 +56,9 @@
     <script src="/scripts/articleView.js"></script>
     <!-- TODO: Due to changes in article.js and articleView.js to attach their interior objects to a global 'app' object, we need to make changes to the contents of the following <script> tag: -->
     <script>
-
       // TODO: After we fetch and load all the articles, what view function do we want to run next?
       // Let's pass in a callback function, to determine what happens AFTER all articles are loaded.
-      app.Article.fetchAll(article);
+      app.Article.fetchAll(articleView.initAdminPage);
     </script>
   </body>
 </html>
