--- a/starter-code/public/admin.html
+++ b/starter-code/public/admin.html
@@ -11,10 +11,8 @@
     <link rel="stylesheet" href="/styles/modules.css">
     <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
     <!-- TODO: Setup a template for each row of the Author Stats section of this page: -->
-      <script id='authors-template' type='text/x-handlebars-template'>
-        <article class='clearfix' data-author='{{author}}' data-stats'{{data}}'>
-          <li>`{{author}} + {{data}}`</li>
-        </article>
+      <script id='article-template' type='text/x-handlebars-template'>
+          <li>{{author}}: {{data}} words written</li>
       </script>
   </head>
   <body>
